[package]
name = "alet"
version = "0.1.1"
edition = "2021"
description = "Simple and stright-forward random generator (wrapper to rand crate) - Inpired by the Python's random module"
license= "MIT"
readme = "README.md"
repository = "https://github.com/EZSNoVa/alet"
homepage = "https://github.com/EZSNoVa/alet"

[dependencies]
rand = "0.8.5"
